# Python-CPP-binding

./: .gitignore  CMakeLists.txt  main.cpp  mmul.cpp  ref.txt  setup.py  test.py
mmul_mod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
